@@ -1,5 +1,5 @@
 # This Build.PL for Mojo-SQLite was generated by
-# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.023
+# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.025
 use strict;
 use warnings;
 
@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.008.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v6.009.
     use strict;
     use warnings;
 
@@ -84,7 +84,7 @@ EOW
         "Dan Book <dbook\@cpan.org>"
       ],
       "dist_name" => "Mojo-SQLite",
-      "dist_version" => "2.001",
+      "dist_version" => "2.002",
       "license" => "artistic_2",
       "module_name" => "Mojo::SQLite",
       "recursive_test_files" => 1,
