@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Add no_wal option to prevent enabling WAL mode on connection.
 
 2.001     2017-02-18 15:36:16 EST
   - Set name_sep in default SQL::Abstract object to support proper quoting of
